Remove collapse class from Bootstrap to fix the navbar

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -18,7 +18,7 @@ h3 {
   min-height:40px;
   max-width:100%;
   background-color: transparent;
-  transition: background 500ms;
+ 
 }
 .fixed{
   background-color:$black-color;
